Layout issue fix

--- a/src/app/activities/rw1/rw1.component.scss
+++ b/src/app/activities/rw1/rw1.component.scss
@@ -163,6 +163,7 @@ line-height: 30px;
 .row.cust-word-img {
     width: 100%;
     max-width: 500px;
+    align-items: center;
 }
 
 
